# smarc2

./: .gitignore  .gitmodules  All Topics.msg.md  LICENSE  README.md  ROS2_interfaces.md  acados_ocp_SAM_equation_system.json  smarc2_structure.json  smarc2_structure.md
.github/workflows/: large-files.yaml
behaviours/: README.md
behaviours/actionable_geofence/: package.xml  setup.cfg  setup.py
behaviours/alars/: README.md  package.xml  setup.cfg  setup.py
behaviours/evolo/evolo_emergency_action/: package.xml  setup.cfg  setup.py
behaviours/evolo/evolo_emergency_action/evolo_emergency_action/: emergency_server.py
behaviours/evolo/prox_ops_actions/: CMakeLists.txt  README.md  package.xml
behaviours/evolo/prox_ops_actions/src/: evolo_loiter_patrol.cpp  evolo_target_inspect.cpp  evolo_target_intercept.cpp  fake_prox_ops_backend.cpp
behaviours/evolo/prox_ops_bt/: README.md  package.xml  setup.cfg  setup.py
behaviours/evolo/prox_ops_bt/prox_ops_bt/: goal_example.json  goal_example.md  prox_ops_bt.py
behaviours/go_to_geopoint/: README.md  package.xml  setup.cfg  setup.py
behaviours/go_to_hydrobaticpoint/: package.xml  setup.cfg  setup.py
behaviours/go_to_rescuepoint/: setup.py
behaviours/go_to_setpoint/: package.xml  setup.cfg  setup.py
behaviours/lolo/lolo_tuper/: README.md  package.xml  setup.cfg  setup.py
behaviours/lolo/lolo_tuper/config/: lolo_tuper_params.yaml  tuper_test_params.yaml
behaviours/lolo/lolo_tuper/launch/: lolo_tuper.launch
behaviours/lolo/lolo_tuper/lolo_tuper/: follower_state.py  lolo_tuper_bt.py  tuper_behaviours.py  tuper_test_node.py
behaviours/lolo_cruise_depth_at_heading/: package.xml  setup.cfg  setup.py
behaviours/lolo_depth_move_to/: README.md  package.xml  setup.py
behaviours/lolo_emergency_action/: README.md  package.xml  setup.cfg  setup.py
behaviours/lolo_move_to/: package.xml  setup.cfg  setup.py
behaviours/rl_control/: README.md
behaviours/sam_diving_controller/: README.md  setup.py
behaviours/sam_emergency_abort/: package.xml  setup.cfg  setup.py
behaviours/sam_emergency_abort/launch/: sam_emergency_abort.launch
behaviours/sam_emergency_abort/sam_emergency_abort/: emergency_client.py  emergency_server.py
behaviours/sam_emergency_action/: README.md  package.xml  setup.cfg
behaviours/sam_mpc/: package.xml  setup.cfg  (+1 more)
behaviours/smarc/smarc_action_base_cpp/: CMakeLists.txt  README.md  package.xml
behaviours/smarc/smarc_action_base_cpp/include/smarc_action_base_cpp/: gentler_action_server.hpp  graceful_shutdown.hpp
behaviours/smarc/smarc_action_base_cpp/src/: gentler_action_server.cpp  graceful_shutdown.cpp  super_simple_action_server.cpp
behaviours/smarc/smarc_basic_cpp/: CMakeLists.txt  package.xml
behaviours/smarc/smarc_basic_cpp/src/: wait_action.cpp
behaviours/smarc/wasp_bt/: README.md  package.xml  setup.cfg
behaviours/smarc/wasp_bt/launch/: wasp_bt.launch  wasp_mqtt_agent.launch
behaviours/smarc/wasp_bt/wasp_bt/bt/: client.py  common.py  ros_bt.py
behaviours/smarc/wasp_bt/wasp_bt/vehicles/: sensor.py
behaviours/smarc/wasp_bt/wasp_bt/waraps/: waraps_task_handler.py  waraps_vehicle.py
behaviours/virtual_lolo/: README.md  package.xml  setup.py
behaviours/virtual_lolo/config/: lolo_default_limits.yaml
behaviours/virtual_lolo/virtual_lolo/: lolo.py
controllers/evolo/evolo_obstacle_avoidance_simple_cpp/: CMakeLists.txt  package.xml
controllers/evolo/evolo_obstacle_avoidance_simple_cpp/include/evolo_obstacle_avoidance_simple_cpp/: OdometryBuffer.hpp
controllers/evolo/evolo_obstacle_avoidance_simple_cpp/src/: evolo_obstacle_avoidance_cpp.cpp
docker/: Dockerfile  README.md  defaults.yaml
documentation/: Contributing.md  Installing ROS2.md  Smarchitecture.md  how_to_ask_for_help.md  installing wireguard on jetson orin.md
drivers/: README.md
examples/: README.md  SuperSimpleActionServer.py
external_equipment/: README.md
external_packages/: README.md
messages/: README.md
messages/lolo_msgs/: CMakeLists.txt  README.md  package.xml
messages/lolo_msgs/msg/: FuelCelldataFCU.msg  FuelCelldataSYS.msg  HyperionTurbidity.msg  Hyperion_fluorescence.msg  Hyperion_turbidity.msg  JFE_do.msg  JfeDo.msg  Links.msg  Pd0BottomTrack.msg  Pd0FixedLeader.msg  Pd0VariableLeader.msg  RbrCtd.msg  Status.msg  Temperatures.msg  Topics.msg  VbsMode.msg  VbsTank.msg  VescFeedback.msg
navigation/: README.md
path_planning/: README.md
perception/: README.md
scripts/: README.md  custom_fastdds_profiles.xml  rosdep_install_from_src.sh  topics_msg_scanner.py
search_planning/: README.md  package.xml  setup.cfg  setup.py
simulation/: README.md
utilities/: README.md
utilities/mqtt_to_ros_agent/: CMakeLists.txt  README.md  package.xml
utilities/mqtt_to_ros_agent/config/: mqtt_to_ros_agent.yaml
utilities/mqtt_to_ros_agent/launch/: mqtt_to_ros_agent.launch
utilities/mqtt_to_ros_agent/src/: mqtt_to_ros_agent_publisher.cpp
utilities/rtmp_ros/: package.xml  setup.cfg  setup.py
utilities/rtmp_ros/launch/: rtmp.launch.py
utilities/rtmp_ros/rtmp_ros/: rtmp_ros_node.py
utilities/smarc_geofence_utils/: CMakeLists.txt  README.md  package.xml
utilities/smarc_geofence_utils/include/smarc_geofence_utils/: geofence_path_checker.hpp
utilities/smarc_geofence_utils/src/: geofence_path_checker.cpp
utilities/str_json_mqtt_bridge/: README.md  package.xml  setup.cfg  setup.py
utilities/str_json_mqtt_bridge/config/: waraps.yaml
utilities/str_json_mqtt_bridge/launch/: waraps_bridge.launch
utilities/str_json_mqtt_bridge/str_json_mqtt_bridge/: bridge.py
utilities/twist_to_path/: CMakeLists.txt  README.md  package.xml
utilities/twist_to_path/launch/: twist_to_path_launch.py
utilities/twist_to_path/src/: twist_to_path.cpp
vehicles/hardware/dji/dji_captain/: package.xml  setup.cfg  setup.py
vehicles/hardware/dji/dji_captain/dji_captain/: dji_captain.py  dji_controller_estimator.py  dji_esc_data_splitter.py  dji_service_caller.py  joy_tester.py  psdk_faker.py  unity_translator.py
vehicles/hardware/dji/dji_captain/launch/: alars_captain.launch  alars_services.launch.py
(+1033 files in other folders)
