<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lolo_emergency_action</name>
  <version>0.0.0</version>
  <description>Emergency Abort Action Server for Lolo</description>
  <maintainer email="liling@kth.se">Li Ling</maintainer>
  <maintainer email="aldot@kth.se">Aldo Teran</maintainer>
  <license>TODO: License declaration</license>

  <depend>smarc_action_base</depend>
  <depend>smarc_mission_msgs</depend>
  <depend>smarc_msgs</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
