<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rtmp_ros</name>
  <version>0.1.0</version>
  <description>Stream ROS 2 Image / CompressedImage topics to an RTMP server via GStreamer H.264.</description>
  <maintainer email="najafian@kth.se">Kaveh</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <!-- System deps (installed via apt, not pip) -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-gi</exec_depend>   <!-- GStreamer Python bindings -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
