<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>str_json_mqtt_bridge</name>
  <version>0.0.0</version>
  <description>A simple json ros string to mqtt publisher</description>
  <maintainer email="ozero@kth.se">Ozer Ozkahraman</maintainer>
  <license>MIT</license>

  <exec_depend>python3-paho-mqtt</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
