<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>prox_ops_actions</name>
  <version>0.0.0</version>
  <description>C++ action servers for Evolo prox-ops behaviours.</description>
  <maintainer email="aldot@kth.se">aldo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>evolo_msgs</depend>
  <depend>smarc_msgs</depend>
  <depend>smarc_geofence_utils</depend>
  <depend>smarc_action_base_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
