<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>prox_ops_bt</name>
  <version>0.0.0</version>
  <description>Python behaviour tree for Evolo prox-ops missions.</description>
  <maintainer email="aldot@kth.se">aldo</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>py_trees</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>evolo_msgs</exec_depend>
  <exec_depend>smarc_action_base</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
