<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lolo_tuper</name>
  <version>0.0.0</version>
  <description>LoLo TUPER: action-server-as-behaviour-tree that follows an acoustically estimated setpoint while holding depth and a min-altitude floor.</description>
  <maintainer email="shekharu@kth.se">shekharu</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>smarc_action_base</depend>
  <depend>smarc_msgs</depend>
  <depend>virtual_lolo</depend>
  <depend>geographic_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geodesy</depend>
  <depend>python3-numpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
