<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wasp_bt</name>
  <version>0.0.0</version>
  <description>The NEW Behaviour Tree for varius SMaRC vehicles, compatible with WARA-PS agent API specs. Usually wet.</description>
  <maintainer email="sdup@kth.se">Shekhar Devm Upadhyay</maintainer>
  <license>MIT</license>

  <exec_depend>py_trees</exec_depend>
  <exec_depend>py_trees_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
