<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dji_captain</name>
  <version>0.0.0</version>
  <description>Captain interface to a dji psdk drone</description>
  <maintainer email="ozero@kth.se">Ozer Ozkahraman</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>gscam</depend>  
  <depend>python3-transforms3d</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
